--- a/templates/components/_blurb.html.j2
+++ b/templates/components/_blurb.html.j2
@@ -1,7 +1,7 @@
 <!-- Book Blurbs -->
 
 {% if config.blurbs %}
-<article class="blurb section">
+<article class="blurbs section">
 <div class="container">
   <h2 class="section-title">
     <a href="http://www.michiganquarterlyreview.com/2015/06/on-riding-sidesaddle-an-interview-with-eric-suzanne/" class="title-link">
