--- a/templates/components/_intro.html.j2
+++ b/templates/components/_intro.html.j2
@@ -27,8 +27,11 @@
     <a href="http://oddbooksapp.com/book/ridingsidesaddle">released online</a>
     as an
     <a href="http://oddbooksapp.com/">OddBook</a>,
-    and performed with music by
-    <a href="http://teacupgorilla.com">Teacup Gorilla</a>.
+    and adapted to the stage by
+    <a href="http://buntport.com/archive/archive.htm">Buntport Theater</a>
+    and
+    <a href="http://teacupgorilla.com">Teacup Gorilla</a>
+    (March, 2016).
   </p>
 </div>
 </article>
