--- a/templates/components/_art.html.j2
+++ b/templates/components/_art.html.j2
@@ -3,17 +3,34 @@
 <article class="art-gallery section">
 <div class="container">
   <h2 class="section-title">
-    <a href="https://goo.gl/maps/P1nk6JQameD2" class="title-link">
-      See the art ▼
+    <a href="http://buntport.com/archive/archive.htm" class="title-link">
+      Watch the show ▼
     </a>
   </h2>
 
-  <p class="art-info">
-    The entire novel (with expanded artwork) is hanging at
-    <a href="https://goo.gl/maps/P1nk6JQameD2">
-      Huckleberry Roasters Larimer Cafe
-    </a>
-    Oct 9 — Nov 13.
-  </p>
+  <div class="art-info">
+    <h3>
+      <a href="http://buntport.com/archive/archive.htm">
+        <b>10 Myths</b>
+        on the
+        <b>Proper Application</b>
+        of
+        <b>Beauty Products</b>
+      </a>
+    </h3>
+    <p>
+      <strong>March 4-26, 2016</strong> —
+      <a href="http://buntport.com/archive/archive.htm">Buntport Theater</a>
+      and
+      <a href="http://teacupgorilla.com">Teacup Gorilla</a>
+      have been collaborating on
+      a live performance
+      that adapts and supplements
+      the novel.
+      Six characters sharing one bathroom,
+      with a full band in the bathtub —
+      what could go wrong?
+    </p>
+  </div>
 </div>
 </article>
