--- a/templates/components/_intro.html.j2
+++ b/templates/components/_intro.html.j2
@@ -9,18 +9,17 @@
   </h2>
 
   <p class="description">
-    <b>{{ config.title }}</b> is
-    a fragmented memory of our time together,
-    and these bodies we inhabit —
-    250 interchangeable index cards
+    <b>{{ config.title }}</b>
+    is a fragmented memory written on
+    250 interchangeable index cards —
     following a cast of friends as they navigate
     fluid genders, relationships,
     and bodies that resist order, category, or completion.
     Based loosely on the life of Margaret Clap,
-    and the myths of Hermaphroditus —
+    and the myth of Salmacis and Hermaphroditus —
     SideSaddle* is an
     <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
-      open-source novel
+      open-source text
     </a>
     published by
     <a href="http://springgunpress.com">SpringGun Press</a>,
@@ -30,8 +29,7 @@
     and adapted to the stage by
     <a href="http://buntport.com/archive/archive.htm">Buntport Theater</a>
     and
-    <a href="http://teacupgorilla.com">Teacup Gorilla</a>
-    (March, 2016).
+    <a href="http://teacupgorilla.com">Teacup Gorilla</a>.
   </p>
 </div>
 </article>
