--- a/templates/components/_intro.html.j2
+++ b/templates/components/_intro.html.j2
@@ -24,8 +24,8 @@
     published by
     <a href="http://springgunpress.com">SpringGun Press</a>,
     <a href="http://oddbooksapp.com/book/ridingsidesaddle">released online</a>
-    as an
-    <a href="http://oddbooksapp.com/">OddBook</a>,
+    by
+    <a href="http://oddbird.net/">OddBird</a>,
     and adapted to the stage by
     <a href="http://buntport.com/archive/archive.htm">Buntport Theater</a>
     and
